--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -1,27 +1,38 @@
-name: golangci-lint
+---
+name: checks
+
 on:
   push:
-    tags:
-      - v*
     branches:
-      - master
+      - main
   pull_request:
+
+env:
+  GO_VERSION: 1.18.0
+
 jobs:
-  test:
-    name: test and lint
+  build:
+    name: "🛠️ Go build and test"
     runs-on: ubuntu-latest
     steps:
-      - name: Install Go
-        uses: actions/setup-go@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v4
         with:
-          go-version: 1.14.x
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Coverage
-        run: go test -v -race -covermode=atomic -coverprofile=cover.out -timeout 10s ./...
-      - name: Report coverage
-        run: bash <(curl -s https://codecov.io/bash) -t 50f54c52-6302-41a7-a8f7-9835c21b53f6
+          go-version: ${{ env.GO_VERSION }}
+          cache: false
+      - name: Build all artifacts
+        run: |
+          go build
+          go test
+
+  golint:
+    name: "🎯 Go lint"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v4
+        with:
+          go-version: ${{ env.GO_VERSION }}
+          cache: false
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v2.3.0
-        with:
-          version: v1.35
+        uses: golangci/golangci-lint-action@v3
