refactor: drop pkg/errors package

--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/setup-go@v4
         with:
           go-version: ${{ env.GO_VERSION }}
-          cache: false
+          cache: true
       - name: Build all artifacts
         run: |
           go build
@@ -33,6 +33,7 @@ jobs:
       - uses: actions/setup-go@v4
         with:
           go-version: ${{ env.GO_VERSION }}
+          # golangci-lint has its own cache for Go modules
           cache: false
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
